--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "copy": " node ./functions/utils/copy-server.mjs",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -20,8 +21,10 @@
     "@angular/service-worker": "^18.1.0",
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
+    "@angular/platform-server": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@angular/material": "~18.1.0",
+    "@angular/ssr": "^18.1.0",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.2.4",
     "tslib": "^2.3.0",
